increase test coverage